chore: add program day one
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,19 @@ body {
     font-family: "Jomolhari";
 }
 
+.dropdown {
+   list-style: none;
+   display: inline-block;
+ }
+ 
+ 
+ .dropdown-menu {
+   margin: 0;
+   list-style: none;
+   border: none;
+   background-color: #a24695;
+ }
+
 .nav-item {
   font-size: 1rem;
 }
